--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -10,9 +10,11 @@ slug: /mine-hnt/light-hotspots
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 This document describes the architecture and technical roadmap planned for converting existing
-Approved Hotspots to Light Hotspots as a software upgrade; updated with HIP70 in mind, should it pass. 
+Approved Hotspots to Light Hotspots as a software upgrade; updated with HIP70 in mind, should it
+pass.
 
-The conclusion of the Light Hotspot project is in progress. **Last updated Friday September 16, 2022**.
+The conclusion of the Light Hotspot project is in progress. **Last updated Friday September 16,
+2022**.
 
 :::info
 
@@ -30,15 +32,19 @@ Since the genesis block, the Helium blockchain has run entirely on the physical 
 the blockchain network grows, each Hotspot running a full node undergoes increasing load and are
 starting to fall out of sync due to the higher compute requirements.
 
-Before the introduction of [HIP 70](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md), the goal was to move Challenge creation and Consensus work to Validators. Since HIP-70 and the introduction of Off-Chain PoC oracles, the definition of Light Hotspot and what it will do has changed. Please read on for detailed changes and timelines.
+Before the introduction of [HIP 70](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md),
+the goal was to move Challenge creation and Consensus work to Validators. Since HIP-70 and the
+introduction of Off-Chain PoC Oracles, the definition of Light Hotspot and what it will do has
+changed. Please read on for detailed changes and timelines.
 
 ## Light Hotspot Properties [Updated]
 
 When the Light Hotspot software is fully developed and in production, they will satisfy the
 following properties:
 
-- A Hotspot on the Helium network will Beacon (also known as emitting a challenge for Proof-of-Coverage) automatically on a pre-determined time interval (up to several times a day);
-- Will submit PoC receipts directly to an Off-Chain PoC Oracle
+- A Hotspot on the Helium network will Beacon (also known as emitting a challenge for
+  Proof-of-Coverage) automatically on a pre-determined time interval (up to several times a day);
+- Will submit PoC receipts directly to an Off-Chain PoC Oracle;
 - Does not store a copy of the Blockchain, eliminating synchronization;
 - Will transmit packets on behalf of IoT devices on the network to an Off-Chain Data Oracle;
 - Does not participate in Consensus Groups;
@@ -53,27 +59,45 @@ the blockchain.
 ## Architecture
 
 This image shows the progression to Light Hotspots, with the role of Miner being deprecated as we
-move the blockchain off the Hotspots and Proof-of-Coverage receipts to an Oracle. At the conclusion of
-Light Hotspot development, the entire Helium blockchain will be removed from Hotspots, Hotspots will Beacon on their own without external input, and all data transfer and Proof-of-Coverage receipts will go to Off-Chain Oracles. 
+move the blockchain off the Hotspots and Proof-of-Coverage receipts to an Oracle. At the conclusion
+of Light Hotspot development, the entire Helium blockchain will be removed from Hotspots, Hotspots
+will Beacon on their own without external input, and all data transfer and Proof-of-Coverage
+receipts will go to Off-Chain Oracles.
 
 <img className="docsheader" src={useBaseUrl('img/mine-hnt/validator-hotspot-dev.jpg')} />
 
 ### HIP-70 Changes
 
-HIP-70 proposes a new architecture that involves several Oracles that allow Proof-of-Coverage generation to be automated and its receipts to be off-chain. The most "expensive" piece of Proof-of-Coverage is not just Challenge creation, but Receipt validation and verification. By taking these tasks off-chain, PoC frequency can increase dramatically, up to several times a day. Hotspot owners can expect more reliable challenges and witnessing.
+HIP-70 proposes a new architecture that involves several Oracles that allow Proof-of-Coverage
+generation to be automated and its receipts to be off-chain. The most "expensive" piece of
+Proof-of-Coverage is not just Challenge creation, but Receipt validation and verification. By taking
+these tasks off-chain, PoC frequency can increase dramatically, up to several times a day. Hotspot
+owners can expect more reliable challenges and witnessing.
 
-The core team has started work on these oracles. Roughly speaking, a Hotspot will Beacon on its own, with neighboring Hotspots witnessing and submitting their receipts to an **Ingestor** Oracle. The **Ingestor**** uploads receipts into a cloud store where another Oracle, called a **Verifier** runs through the files to filter out invalid receipts. The output of the **Verifier** is passed to a **Reward** oracle that determines how much reward shares a Hotspot should earn for that period. Finally, Hotspots are rewarded for their work in Proof-of-Coverage. 
+The core team has started work on these Oracles. Roughly speaking, a Hotspot will Beacon on its own,
+with neighboring Hotspots witnessing and submitting their receipts to an **Ingestor** Oracle. The
+**Ingestor\*\*** uploads receipts into a cloud store where another Oracle, called a **Verifier**
+runs through the files to filter out invalid receipts. The output of the **Verifier** is passed to a
+**Reward** Oracle that determines how much reward shares a Hotspot should earn for that period.
+Finally, Hotspots are rewarded for their work in Proof-of-Coverage.
 
 For this to happen, two blockchain-related pieces must complete:
-1. The launch of the IOT Subnetwork as described in [HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md)
+
+1. The launch of the IOT Subnetwork as described in
+   [HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md)
 2. The passing of HIP-70 and the completed transition to a new L1
 
-To avoid further delays, the core team believes the work for Off-Chain PoC has progressed enough to allow an intermediate step that allows Hotspots to remove the Erlang miner, have Hotspots beacon at a more frequent interval, and remove PoC off chain.
+To avoid further delays, the core team believes the work for Off-Chain PoC has progressed enough to
+allow an intermediate step that allows Hotspots to remove the Erlang miner, have Hotspots beacon at
+a more frequent interval, and remove PoC off chain.
 
-The change to complete Light Hotspot will be at the **Reward** Oracle step. Instead of the **Verifier** submitting its Proof-of-Coverage results to the Reward Oracle, all Proof-of-Coverage receipts will be signed and submitted to the Helium L1 Blockchain where rewards will be paid out in HNT (as they are today) by a new Oracle called the Injector. This removes the need for the IOT Subnetwork to exist and removes the dependency of the L1 switchover.
+The change to complete Light Hotspot will be at the **Reward** Oracle step. Instead of the
+**Verifier** submitting its Proof-of-Coverage results to the Reward Oracle, all Proof-of-Coverage
+receipts will be signed and submitted to the Helium L1 Blockchain where rewards will be paid out in
+HNT (as they are today) by a new Oracle called the Injector. This removes the need for the IOT
+Subnetwork to exist and removes the dependency of the L1 switchover.
 
 <img className="docsheader" src={useBaseUrl('img/mine-hnt/light-hotspot-hip70.png')} />
-
 
 ## Code and Development
 
@@ -105,7 +129,10 @@ Oracle work can be found at the [Oracles](https://github.com/helium/oracles) rep
   will also receive a mandatory software update.
 - **~~April 19 2022~~** **May 11**: Activate set of chain variables to enable Light Hotspots on
   Mainnet
-- **September 2022**: 
-- Introduction of HIP-70, Off-Chain Oracles, and Hotspots transferring data, and Challenging more reliably
-- Continuing Oracle Work and beta `gateway-rs` builds to allow Hotspots to Beacon on a regular interval and send its receipts to a Devnet Oracle for further receipt processing
-- **~November 2022**: Should HIP-70 pass, the completion of Light Hotspots with the launch of PoC Oracles, Data Transfer Oracles, and a final `gateway-rs` build to remove the Erlang miner 
+- **September 2022**:
+- Introduction of HIP-70, Off-Chain Oracles, and Hotspots transferring data, and Challenging more
+  reliably
+- Continuing Oracle Work and beta `gateway-rs` builds to allow Hotspots to Beacon on a regular
+  interval and send its receipts to a Devnet Oracle for further receipt processing
+- **~November 2022**: Should HIP-70 pass, the completion of Light Hotspots with the launch of PoC
+  Oracles, Data Transfer Oracles, and a final `gateway-rs` build to remove the Erlang miner
