--- a/docs/mine-hnt/validators/mainnet/wallet.mdx
+++ b/docs/mine-hnt/validators/mainnet/wallet.mdx
@@ -146,7 +146,7 @@ unstaked.
 
 If you unstake tokens the validator node enters a stake cooldown period. During this cooldown period
 the validator node will not earn rewards and at the end of the cooldown period (currently 125,000
-blocks or approximately 3 months in mainnet) your initial staking amount will be released to the
+blocks or approximately 86 days in mainnet) your initial staking amount will be released to the
 wallet.
 
 To ensure the operator understands this unstake operation is not reversible and cannot be shortened,
