--- a/docs/mine-hnt/validators/mainnet/wallet.mdx
+++ b/docs/mine-hnt/validators/mainnet/wallet.mdx
@@ -154,9 +154,18 @@ there are additional calculations to be performed in the unstake command. You ne
 stake release block height which should be at least the current block height plus the cooldown
 period, and 5-10 blocks to allow for chain processing delays.
 
+:::tip
+
+The number 1537797 shown below is only an example. You must look up the current [block height in 
+explorer](https://explorer.helium.com/blocks) and use the current block height in your calculation
+of the `stake-release-height`.
+
+:::
+
 For example, if the current block height was 1,537,797, you'd add 125,000 for the stake withdrawl
-cooldown period, plus an additional 10 blocks to allow for chain processing delays. Therefore the
-`stake-release-height` = `1537797 + 125000 + 10` = `1662807`.
+cooldown period, plus an additional 30 blocks to allow for chain processing delays. Therefore the
+`stake-release-height` = `1537797 (current block height) + 125000 (cool down period) + 30 (grace
+period)` = `1662827`. 
 
 The cooldown length, in blocks, is called `stake_withdrawal_cooldown` and is a chain variable. This
 variable is viewable by running `miner ledger variables stake_withdrawal_cooldown`, and was changed 
