--- a/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/platformio.mdx
+++ b/docs/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/platformio.mdx
@@ -40,9 +40,7 @@ For these examples, you will need the following:
 
 ### Software
 
-The following products are required. Refer to the
-[Getting started with Helium and PlatformIO](/use-the-network/devices/development/helium-platformio/helium-platformio-gettingstarted)
-guide for details.
+The following products are required.
 
 - [VSCode \(IDE)](https://code.visualstudio.com/)
   - [PlatformIO \(VScode Extension)](https://platformio.org/)
@@ -82,8 +80,8 @@ environment, you are going to love what [PlatformIO ](https://platformio.org/)op
 The many widget views available within PlatformIO.
 <p />
 
-This guide will walk through installing PlatformIO and deploying a Helium Arduino program on the
-[ST Discovery Development Kit](../devices/devkit/). Let's do it.
+This guide will walk through installing PlatformIO and deploying a Helium Arduino program on the ST
+Discovery Development Kit. Let's do it.
 
 ### Installing PlatformIO
 
