--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -126,7 +126,8 @@ selecting your app.
 
 #### Customize Console Branding
 
-Console Providers can customize their instance of Console UI including the ability to swap out images/logos, email content, and change footer links. 
+Console Providers can customize their instance of Console UI including the ability to swap out
+images/logos, email content, and change footer links.
 
 To customize your open source Console:
 
@@ -140,7 +141,8 @@ Customize `config/app-config.json` as needed.
 
 :::important
 
-If you choose to customize your version of Console you need to build from source or your customizations will be overwritten. 
+If you choose to customize your version of Console you need to build from source or your
+customizations will be overwritten.
 
 :::
 
@@ -283,7 +285,8 @@ Monitor the account in explorer to verify that Router is doing this appropriatel
 Many fees benefit from
 [implicit burn](/blockchain/transaction-fees#transaction-fees-and-implicit-burn), including when
 paying for OUIs and DevAddr's (done previously when you
-[purchased an OUI](/use-the-network/buy-an-oui), but your router needs a DC balance to run.
+[purchased an OUI](/use-the-network/run-a-network-server/buy-an-oui/), but your router needs a DC
+balance to run.
 
 The cost for rurning a router is complex. See community member disk91.com's
 [guide](https://www.disk91.com/2021/technology/lora/what-is-the-real-cost-of-helium-communication/)
