--- a/docs/use-the-network/console/coverage.mdx
+++ b/docs/use-the-network/console/coverage.mdx
@@ -26,7 +26,7 @@ last 24 hrs for devices belonging to the Organization.
 
 Only Hotspots that have successfully transferred packets are displayed on the Coverage Breakdown
 tab. To show all Hotspots on this tab within range of the device, turn on Multiple Packets
-[here](/use-the-network/console/profiles/) and choose to purchase all packets. Assuming there’s
+[here](/use-the-network/console/profiles/) and choose to purchase all packets. Assuming there is
 sufficient Data Credit balance, Console will purchase packets from all the Hotspots that heard the
 device and display them.
 
