updated '5g' links and PoC terms to 'mobile'

--- a/docs/5g-on-helium/mining-mobile.mdx
+++ b/docs/5g-on-helium/mining-mobile.mdx
@@ -1,9 +1,9 @@
 ---
-id: mining-5g
+id: mining-mobile
 hide_title: true
 sidebar_label: Mine MOBILE
 sidebar_class_name: new
-slug: /5g-on-helium/mining-5g
+slug: /5g-on-helium/mining-mobile
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
