Updated "5G" terminology to "MOBILE" (#1005)
* updated reward weighting and sample calculations

- replaced “Units” with “Points”
- increased example calculation numbers to closer align to expectations
- reward scaling weights updated

* example rewards calculation numbers updates

* spacing on example calculations for readability

* ‘DPA Event’ renamed to ‘DPA Activation event’

* added link to FreedomFi Status Page

* reorganized sections for reading flow

* installtion guide header

* typo fix, moved FreeddomFi Status page higher up

* real numbers used for rewards sample calculations

* spacing and formula cleanup

* explorer refresh expectation update

* Update docs/5g-on-helium/mining-5g.mdx

* update docs to current stage

* speed tests details, details on reward period

* G1P4 - heartbeat requirement increased

* sample speed test table

* speed test table placeholder

* included speed test example cases

* wording fix

* image updates

* explainer text update

- updated example explainer text for speed test samples
- formatted Speed Test capitalization
- MOBILE PoC Oracle wording fix
- corrected color dot for Not Enough Data explorer sample

* moving average wordsmithing

* two column explainer text option

* speed test table explainer text

* speed test sample explainer text updates

* derived data example image and text updates

* current stage call out and formatting fixes

* updated '5g' links and PoC terms to 'mobile'

* url redirects

* line wrap fix

--- a/docs/5g-on-helium/mining-mobile.mdx
+++ b/docs/5g-on-helium/mining-mobile.mdx
@@ -1,9 +1,9 @@
 ---
-id: mining-5g
+id: mining-mobile
 hide_title: true
 sidebar_label: Mine MOBILE
 sidebar_class_name: new
-slug: /5g-on-helium/mining-5g
+slug: /5g-on-helium/mining-mobile
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -12,10 +12,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # 5G Mining and MOBILE Rewards
 
-Several factors contribute to how much `MOBILE` a 5G Hotspot will earn over a given period, there
-are some higher-level concepts, design elements, and rules to keep in mind that will help better
-explain what you might earn and why. This section covers these, as well as some mining and token
-reward basics.
+Several factors contribute to how much MOBILE a 5G Hotspot will earn over a given period, there are
+some higher-level concepts, design elements, and rules to keep in mind that will help better explain
+what you might earn and why. This section covers these, as well as some mining and token reward
+basics.
 
 ## How To Mine MOBILE
 
