--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -15,6 +15,8 @@ are several channels dedicated to development. There’s also
 
 ### Can end devices communicate directly with each other or do they have to hop over the Helium Hotspot?
 
+Call Joey and Scott
+
 All compatible devices communicate via Hotspots. There is no direct communication or meshing in the
 Helium Network.
 
