--- a/docs/5g-on-helium/mining-mobile.mdx
+++ b/docs/5g-on-helium/mining-mobile.mdx
@@ -134,8 +134,8 @@ they are indoor or outdoor, as well as their power output, as follows:
 
 :::note
 
-Begining in [Genesis Phase 3](./mobile-poc#genesis-phase-3-speed-tests-and-quality-of-service) 5G
-Hotspots perform Speed Tests that impact Rewards Scaling Multipliers in addition to Small Cell Type.
+Begining in [Genesis Phase 3](./mobile-poc##speed-test-tier-reward-scaling) 5G Hotspots perform
+Speed Tests that impact Rewards Scaling Multipliers in addition to Small Cell Type.
 
 :::
 
