--- a/docs/5g-on-helium/mining-mobile.mdx
+++ b/docs/5g-on-helium/mining-mobile.mdx
@@ -134,8 +134,9 @@ they are indoor or outdoor, as well as their power output, as follows:
 
 :::note
 
-Begining in [Genesis Phase 3](./mobile-poc##speed-test-tier-reward-scaling) 5G Hotspots perform
-Speed Tests that impact Rewards Scaling Multipliers in addition to Small Cell Type.
+Soon 5G Hotspots will perform Speed Tests that impact
+[Rewards Scaling Multipliers](<(./mobile-poc##speed-test-tier-reward-scaling)>) in addition to Small
+Cell Type.
 
 :::
 
