--- a/docs/5g-on-helium/mining-mobile.mdx
+++ b/docs/5g-on-helium/mining-mobile.mdx
@@ -135,7 +135,7 @@ they are indoor or outdoor, as well as their power output, as follows:
 :::note
 
 Soon 5G Hotspots will perform Speed Tests that impact
-[Rewards Scaling Multipliers](<(./mobile-poc##speed-test-tier-reward-scaling)>) in addition to Small
+[Rewards Scaling Multipliers](./mobile-poc##speed-test-tier-reward-scaling) in addition to Small
 Cell Type.
 
 :::
