--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -32,6 +32,49 @@ The [Helium Discord](https://discord.gg/helium) is the best place to get real-ti
 community. The [#5g-cbrs](discord://discord.com/channels/404106811252408320/836735476659912754)
 channel is most relevant for using 5G on the Network.
 
+---
+
+## Installation and Setup Guides
+
+Instructions on installing a CBRS Small Cell Radio and registration with the SAS are provided by the
+individual 5G Hotspot Makers.
+
+For FreedomFi Gateways refer to the installation guides here:
+
+- [FreedomFi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
+- [FreedomFi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
+
+For Bobcat500 Gateways refer to the Bobcat Knowledge Center:
+
+- [Bobcat Knowledge Center CBRS Radio Troubleshooting Guide](https://bobcatminer.zendesk.com/hc/en-us/articles/4588536001435-Overview)
+
+:::warning
+
+Misrepresentation of CBRS Radio installation information, including GPS location, height, antenna
+orientation or other characteristics in a SAS is a violation of FCC regulations and may result in
+fines and/or criminal penalties.
+
+:::
+
+---
+
+## Access Gateway and Radio Dashboards
+
+Once the 5G Hotspot is onboarded and a Small Cell Radio is physically installed, the Small Cell
+Radio will automatically initialize and acquire a GPS lock. Once that is complete, the Small Cell
+Radio dashboard appears under the "Radio Dashboard" tab on the local IP address of the 5G Hotspot.
+
+- If you are using a FreedomFi gateway, you can access the miner and radio dashboard via the URL:
+  [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
+
+- If you are using a Bobber 500 gateway, you can access the miner and radio dashboard via this URL:
+  [http://bobber-gateway.local/](http://bobber-gateway.local/)
+
+5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 5 days,
+depending on how quickly it is registered in the SAS.
+
+---
+
 ## Outdoor Small Cell Radios
 
 Outdoor Small Cell Radios are more powerful than Indoor Small Cell Radios and are weatherized to
@@ -64,6 +107,8 @@ switch. A soft limit to consider is 7 Small Cell Radios to one 5G Hotspot, howev
 only theoretical as the true limiting factor is bandwidth saturation. All 5G Hotspots are built with
 a 1 Gbps Network Interface Card (NIC), the throughput of all the radios combined is limited to 1
 Gbps or your internet speed, whichever is lower.
+
+---
 
 ## Troubleshooting
 
