--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -11,17 +11,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # 5G On Helium
 
-Today all mobile networks are built top-down by service providers (e.g., AT&T and Verizon in the
-United States). Future networks will likely be a hybrid of large-scaled operators and people-owned
-5G Hotspots due to demands of consumer behavior (higher bandwidth and lower latency requirements)
-and the physics of wireless radio. More data on the wireless network requires higher frequency
-bands, which requires denser networks with more nodes, which further increases the cost of site
-acquisition.
+Historically many mobile networks are built top-down by service providers (e.g., AT&T and Verizon in
+the United States). However, future networks will likely be a hybrid of large-scale operators and
+people-owned 5G Hotspots due to consumer behavior demands (higher bandwidth and lower latency
+requirements) and the physics of wireless radio, requiring denser networks with more nodes, further
+increasing site acquisition costs.
 
-The Helium model decentralizes site acquisition costs and enables communities to participate in
-building reliable, high bandwidth networks using technologies like
-[CBRS](./5g-on-helium/cbrs-radios) and Wi-Fi. This does not completely replace service providers
-altogether. Instead, we see service providers as a critical component of this ecosystem.
+The Helium model decentralizes these costs and enables communities to participate in building
+reliable, high-bandwidth networks using technologies like [CBRS](./5g-on-helium/cbrs-radios) and
+Wi-Fi. We see service providers as a critical component of this ecosystem rather than replacing
+service providers altogether.
 
 :::tip Purchase a 5G Hotspot and CBRS Small Cell Radios
 
@@ -32,20 +31,85 @@ purchasing a 5G Hotspot and CBRS Radios to build coverage in your area!
 
 ## Network of Networks
 
-With the passing of
-[HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) a general
-structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium Network
-was created. The Helium Mobile DAO with 5G Hotspots is the first step in the evolution of the Helium
-ecosystem.
+A general structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium
+Network was created with the passing of
+[HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md). The Helium Mobile
+DAO with 5G Hotspots is the first step in the evolution of the Helium ecosystem.
 
-## The Helium MOBILE Token
+The passing of [HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
+additionally allows for the creation of MOBILE tokens that will reward 5G Hotspots with Small Cell
+Radio(s) on the existing Helium Blockchain.
 
-The passing of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
-allows for the creation of MOBILE tokens that will reward 5G Hotspot operators on the existing
-Helium Blockchain. This will immediately allow any online 5G Hotspot with a Small Cell Radio to mine
-MOBILE tokens.
+---
 
-50B (billion) of 250B MOBILE is pre-mined as specified in the
-[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
-in the community-approved HIP 53 and deposited to the Helium Foundation. For more information on the
-pre-mine and how it is used, see [Pre-Mine](/5g-on-helium/mobile-pre-mine).
+## Pre-Mine
+
+As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) and
+[HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview), and
+[approved by community-wide votes](https://heliumvote.com/14rifUhocpzdwsrWaG5PDbdREDkzyesKe1hXuWzibv8h9DdqKLe),
+the Helium Foundation receives an allocation of 50B (billion) of 250B MOBILE tokens in the form of a
+pre-mine.
+
+The uses of proceeds are roughly defined as follows:
+
+**Genesis Period Rewards: 10B MOBILE**
+
+The Helium Foundation will work with the core developers to initiate the Genesis period of MOBILE
+rewards. 100M (million) tokens will be programmatically issued per day to all active Helium 5G
+Hotspots during the Genesis period.
+
+Details of the proportional mining rewards for active 5G Small Cell Radios
+[can be found here.](/5g-on-helium/mobile-poc) Any MOBILE not mined during the Genesis period may be
+reallocated to Grants and Operations.
+
+**Grants and Operations: 30B MOBILE**
+
+The Helium Foundation will distribute grants to teams making core contributions to the development
+of the MOBILE subDAO. Grants will be distributed based on defined deliverables and milestones.
+
+The Nova Labs team will be the first grant recipient for work-in-progress and ongoing development
+for the MOBILE subDAO. This is spread across three deliverables with 5B MOBILE per milestone for a
+total grant of 15B MOBILE:
+
+- Milestone 1: Ability for 5G Hotspots to earn MOBILE (by August 2022)
+- Milestone 2: Development and release of programmatic treasury (by October 2022)
+- Milestone 3: Proof-of-Coverage based rewards (by January 2023)
+
+The remaining 15B MOBILE is reserved for other work pertaining to Oracles and Mappers development or
+other community contributions.
+
+**Growth Activities Related to the MOBILE subDAO: 10B MOBILE**
+
+Reserved for marketing and educational campaigns around the MOBILE subDAO.
+
+---
+
+## Emissions Curve
+
+There is a max supply of 250B (billion) MOBILE with issuance halvenings every two years aligned with
+the HNT issuance halvenings. The first halving will occur on August 1, 2023, to align with HNT
+halving and will continue on a 2-year cycle afterward. Creating a "stub period" as defined by
+[HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), which will
+begin when standard emissions of MOBILE tokens begin (and MOBILE can be redeemed by HNT in the
+subDAO's treasury).
+
+The date for this is currently TBD and dependent on core developers implementing the HNT token
+treasury and redemption transactions on the Helium Blockchain as defined for all new subDAOs in
+Phase 2 of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
+
+---
+
+## Manage Tokens with the Helium Wallet App
+
+A 5G Hotspot with an attached and properly registered Small Cell Radio will start earning MOBILE
+automatically as one "lump sum" to the associated Wallet. You can learn more about calculating
+MOBILE Rewards in the [MOBILE Proof of Coverage](/5g-on-helium/mobile-poc) documentation.
+
+Interacting with MOBILE tokens is only possible using the
+[Helium Wallet App](./wallets/helium-wallet-app). Be sure to update the Helium Wallet app to the
+latest version. More information can be found on the
+[#announcements](discord://discord.com/channels/404106811252408320/730418759298318346) channel in
+[Helium Discord](https://discord.gg/helium)
+
+- [App Store](https://apps.apple.com/us/app/helium-hnt-wallet/id1609525848)
+- [Google Play](https://play.google.com/store/apps/details?id=com.helium.wallet.app&gl=US)
