Update console-hosting-providers.mdx (#991)
* Update console-hosting-providers.mdx

Added note about no Console API v1 access to Foundation Console

* line wrap fix

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -26,8 +26,9 @@ out to the given provider.
   [here](https://www.helium-iot.eu/use-helium-with-helium-iot-europe/).
 - Ubidots - Power your IoT and cloud applications with Ubidots. Sign up for beta
   [here](https://bit.ly/3JygTvn).
-- Foundation Console - Free for demo and educational purposes. Capped at 10 devices, a single
-  Organization and no API access. Sign up [here](https://console.helium.com/).
+- Foundation Console - For demo and educational purposes. Capped at 10 devices and a single
+  Organization. Sign up [here](https://console.helium.com/). No API v1 endpoint access on the
+  Foundation Console.
 - Nova Console - contact sales@nova-labs.com.
 - BrDot Console - Console Hosting Provider based in Brazil. For more information contact
   sales@brdot.co.
